--- a/wideloop/wideloop.ipynb
+++ b/wideloop/wideloop.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,30 +20,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import data and drop columns – you don't have to do the latter!"
+    "Import data. You don't have to drop any columns as the pivot only keeps those that you specify."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/aidanastridge/Documents/32100353.csv')\n",
-    "columns_to_drop = ['DGUID','UOM','UOM_ID','SCALAR_FACTOR','SCALAR_ID','VECTOR','COORDINATE','STATUS','SYMBOL','TERMINATED','DECIMALS']\n",
-    "df = df.drop(columns_to_drop, axis=1)"
+    "df = pd.read_csv('/Users/aidanastridge/Documents/wideloop/32100353.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pivot wide"
+    "Pivot wide. You must reset index or you can't select columns – necessary for for-loop."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +67,234 @@
     "d = {}\n",
     "for i in province_names:\n",
     "    d[i] = pd.DataFrame(pivot_df.loc[pivot_df['GEO'] ==  i ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Estimates</th>\n",
+       "      <th>REF_DATE</th>\n",
+       "      <th>GEO</th>\n",
+       "      <th>Average yield per colony</th>\n",
+       "      <th>Beekeepers</th>\n",
+       "      <th>Colonies</th>\n",
+       "      <th>Production of natural honey, total [16133111]</th>\n",
+       "      <th>Value of natural honey and wax</th>\n",
+       "      <th>Value of natural honey, total [16133111]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1924</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1925</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>2040.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1926</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>2560.0</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1927</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1928</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>4150.0</td>\n",
+       "      <td>336.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>67.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1572.0</td>\n",
+       "      <td>311000.0</td>\n",
+       "      <td>38564.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>66472.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1653.0</td>\n",
+       "      <td>314800.0</td>\n",
+       "      <td>31418.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1621.0</td>\n",
+       "      <td>283000.0</td>\n",
+       "      <td>30735.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>66846.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1754.0</td>\n",
+       "      <td>324500.0</td>\n",
+       "      <td>34061.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93216.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1700.0</td>\n",
+       "      <td>300500.0</td>\n",
+       "      <td>30407.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94706.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>99 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Estimates  REF_DATE      GEO  Average yield per colony  Beekeepers  Colonies   \n",
+       "0              1924  Alberta                       0.0       160.0       0.0  \\\n",
+       "1              1925  Alberta                      56.0       140.0    2040.0   \n",
+       "2              1926  Alberta                      84.0       150.0    2560.0   \n",
+       "3              1927  Alberta                      87.0       200.0    3450.0   \n",
+       "4              1928  Alberta                      81.0       200.0    4150.0   \n",
+       "..              ...      ...                       ...         ...       ...   \n",
+       "94             2018  Alberta                       NaN      1572.0  311000.0   \n",
+       "95             2019  Alberta                       NaN      1653.0  314800.0   \n",
+       "96             2020  Alberta                       NaN      1621.0  283000.0   \n",
+       "97             2021  Alberta                       NaN      1754.0  324500.0   \n",
+       "98             2022  Alberta                       NaN      1700.0  300500.0   \n",
+       "\n",
+       "Estimates  Production of natural honey, total [16133111]   \n",
+       "0                                                   55.0  \\\n",
+       "1                                                  115.0   \n",
+       "2                                                  215.0   \n",
+       "3                                                  300.0   \n",
+       "4                                                  336.0   \n",
+       "..                                                   ...   \n",
+       "94                                               38564.0   \n",
+       "95                                               31418.0   \n",
+       "96                                               30735.0   \n",
+       "97                                               34061.0   \n",
+       "98                                               30407.0   \n",
+       "\n",
+       "Estimates  Value of natural honey and wax   \n",
+       "0                                    14.0  \\\n",
+       "1                                    24.0   \n",
+       "2                                    38.0   \n",
+       "3                                    63.0   \n",
+       "4                                    70.0   \n",
+       "..                                    ...   \n",
+       "94                                    NaN   \n",
+       "95                                    NaN   \n",
+       "96                                    NaN   \n",
+       "97                                    NaN   \n",
+       "98                                    NaN   \n",
+       "\n",
+       "Estimates  Value of natural honey, total [16133111]  \n",
+       "0                                              14.0  \n",
+       "1                                              23.0  \n",
+       "2                                              37.0  \n",
+       "3                                              60.0  \n",
+       "4                                              67.0  \n",
+       "..                                              ...  \n",
+       "94                                          66472.0  \n",
+       "95                                          58188.0  \n",
+       "96                                          66846.0  \n",
+       "97                                          93216.0  \n",
+       "98                                          94706.0  \n",
+       "\n",
+       "[99 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['Alberta']"
    ]
   }
  ],
